--- a/LinearRegression/Lab1_2.ipynb
+++ b/LinearRegression/Lab1_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMo2/cqhru4swj+ZkjLKRPL",
+      "authorship_tag": "ABX9TyND7E5FHKz5weVbVidWC+l1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,8 +53,6 @@
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "from sklearn.metrics import r2_score\n",
-        "\n",
-        "# Step 1: Create the DataFrame\n",
         "data = {\n",
         "    'Weight': [79, 69, 73, 95, 82, 55, 69, 71, 64, 69],\n",
         "    'Height': [1.80, 1.68, 1.82, 1.70, 1.87, 1.55, 1.50, 1.78, 1.67, 1.64],\n",
@@ -64,31 +62,16 @@
         "}\n",
         "\n",
         "df = pd.DataFrame(data)\n",
-        "\n",
-        "# Step 2: Handle Missing Value\n",
-        "# Impute missing Age with mean or median\n",
-        "df['Age'] = df['Age'].fillna(df['Age'].median())  # use mean() or median()\n",
-        "\n",
-        "# Step 3: Encode Gender\n",
+        "df['Age'] = df['Age'].fillna(df['Age'].median())\n",
         "le = LabelEncoder()\n",
-        "df['Gender_encoded'] = le.fit_transform(df['Gender'])  # Male=1, Female=0\n",
-        "\n",
-        "# Step 4: Define features and target\n",
+        "df['Gender_encoded'] = le.fit_transform(df['Gender'])\n",
         "X = df[['Height', 'Age', 'Gender_encoded']]\n",
         "y = df['Weight']\n",
-        "\n",
-        "# Step 5: Train the Linear Regression model\n",
         "model = LinearRegression()\n",
         "model.fit(X, y)\n",
-        "\n",
-        "# Step 6: Output model coefficients\n",
         "print(\"Intercept:\", model.intercept_)\n",
         "print(\"Coefficients:\", model.coef_)\n",
-        "\n",
-        "# Optional: Make predictions\n",
         "y_pred = model.predict(X)\n",
-        "\n",
-        "# Evaluate\n",
         "print(\"R² Score:\", r2_score(y, y_pred))\n"
       ]
     },
@@ -97,8 +80,6 @@
       "source": [
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "\n",
-        "# 1. Actual vs Predicted\n",
         "plt.figure(figsize=(8, 5))\n",
         "sns.scatterplot(x=y, y=y_pred)\n",
         "plt.plot([min(y), max(y)], [min(y), max(y)], color='red', linestyle='--')\n",
@@ -108,8 +89,6 @@
         "plt.grid(True)\n",
         "plt.tight_layout()\n",
         "plt.show()\n",
-        "\n",
-        "# 2. Residual Plot\n",
         "residuals = y - y_pred\n",
         "\n",
         "plt.figure(figsize=(8, 5))\n",
